test for mutex
